# ris_cpp_test

./: .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  CMakeLists.txt  FORTRAN_DEPENDENCY_ANALYSIS.md  FORTRAN_MODERNIZATION_GUIDE.md  MODERNIZATION_STRATEGY.md  README.md  cleanup_duplicates.sh  cleanup_unused_files.sh  fix_real_syntax.sh  fix_use_statements.sh  fortran2023compile_errors.md  libmod_deps.dot  modernize_fortran.sh  ris_workflow.md
ris_cpp/: CMakeLists.txt  FORTRAN_CPP_COMPARISON.md  README.md  constants.hpp  cpp_refactoring_workflow.md  debug.hpp  def.cpp  def.hpp  facts.cpp  facts.hpp  fortran_interface.cpp  globals.cpp  io.hpp  machine.cpp  main.cpp  math_utils.cpp  mixblock.cpp  ris_cal.cpp  ris_cal.hpp  ris_output.cpp  ris_output.hpp  smd.cpp  state.cpp  summary.cpp  summary.hpp
src/ris_cpp/: CMakeLists.txt  build.sh  constants.cpp  constants.hpp  csl.cpp  csl.hpp  debug.cpp  def.cpp  def.hpp  fortran_interface.cpp  globals.cpp  globals.hpp  io.cpp  machine.hpp  main.cpp  math_utils.cpp  math_utils.hpp  mixblock.cpp  mixblock.hpp  ris_cal.cpp  ris_cal_cpp_draft.hpp  ris_output.cpp  ris_output.hpp  smd.cpp  smd.hpp  state.cpp  state.hpp  summary.cpp
src/ris_cpp/test/: Nd_2P_n3.ci  Nd_2P_n3.cm  Nd_2P_n3.sum  Nd_2S_n3.csum  Nd_2S_n3.m  test_main.cpp
src/ris_cpp/test/raw/: Nd_2P_n3.m  Nd_2P_n3.w  Nd_2S_n3.ci  Nd_2S_n3.cm
test/: CMakeLists.txt  Nd_2P_n3.IOB  Nd_2P_n3.ITB  Nd_2P_n3.c  Nd_2P_n3.ci  Nd_2P_n3.cilsj  Nd_2P_n3.csum  Nd_2P_n3.lsj.lbl  Nd_2S_n3.Nd_2P_n3.cfi  Nd_2S_n3.c  Nd_2S_n3.lsj.lbl  Nd_2S_n3.sum  isodata  test_modern_cpp.cpp
(+1077 files in other folders)
